widget-contribution: fix spacing

--- a/app/client/stylesheets/components/pu-block.sass
+++ b/app/client/stylesheets/components/pu-block.sass
@@ -99,7 +99,7 @@
 
     &-inner
         margin: $spacing-default (-$spacing-default) (-$spacing-default)
-        padding: $spacing-default
+        padding: 0 $spacing-default
         border-top: 2px solid $color-gallery
 
     &-container
